--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <title>Login</title>
 </head>
 
-<body>
-    <h1 class="text-3xl font-bold underline">Aqui ira el login pero con Tailwind CSS</h1>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+    <!-- <h1 class="text-3xl font-bold underline">Aqui ira el login pero con Tailwind CSS</h1>
 
     <a href="ticket.html" class="bg-blue-500 py-1 px-2.5 rounded text-white hover:bg-blue-700 cursor-pointer">Enviar al
-        ticket</a>
+        ticket</a> -->
 
+
+
+    <div class="max-w-lg p-6 bg-white border border-gray-200 rounded-lg shadow-sm">
+
+
+        <form class="max-w-lg mx-auto" id="frmLogin">
+            <div class="mb-5">
+                <label for="usuario" class="block mb-2 text-sm font-medium text-gray-900">Usuario</label>
+                <input type="usuario" id="usuario" name="usuario"
+                    class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+            </div>
+            <div class="mb-5">
+                <label for="password" class="block mb-2 text-sm font-medium text-gray-900">Contraseña</label>
+                <input type="password" id="password" name="password"
+                    class="shadow-xs bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+            </div>
+
+            <div class="flex items-start mb-5">
+                <div class="flex items-center h-5">
+                    <input id="recuerdame" type="checkbox" value=true name="recuerdame"
+                        class="w-4 h-4 border border-gray-300 rounded-sm bg-gray-50 focus:ring-3 focus:ring-blue-300" />
+                </div>
+                <label for="terms" class="ms-2 text-sm font-medium text-gray-900">Recuerdame</label>
+            </div>
+            <button type="submit"
+                class="text-white cursor-pointer w-full bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center">Iniciar
+                sesión</button>
+        </form>
+
+    </div>
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/login.js"></script>
 </body>
 
