--- a/public/ticket.html
+++ b/public/ticket.html
@@ -22,14 +22,14 @@
         </div>
         <hr>
         <div class="flex items-center justify-around gap-4 mt-5">
-            <div class="flex items-center justify-center gap-4">
+            <div class="max-w-lg w-full flex items-center justify-center gap-4">
                 <label for="countries" class="block mb-2 text-lg font-medium text-gray-900">Estatus</label>
                 <select id="countries"
                     class="bg-gray-50 border uppercase border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option selected>-- seleccionar --</option>
-                    <option value="Activo">Activo</option>
-                    <option value="En Proceso">En Proceso</option>
-                    <option value="Finalizado">Finalizado</option>
+                    <option value="T" selected>Todos</option>
+                    <option value="A">Activo</option>
+                    <option value="EP">En Proceso</option>
+                    <option value="F">Finalizado</option>
                 </select>
             </div>
             <button type="button" id="btnGenerarTicket"
@@ -47,7 +47,7 @@
 
 
         <div class="relative overflow-x-auto mt-10">
-            <table class="w-full text-sm text-left rtl:text-right text-gray-500">
+            <table class="w-full text-sm text-left rtl:text-right text-gray-500" id="tblTicket">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                     <tr>
                         <th scope="col" class="px-6 py-3">
@@ -63,57 +63,21 @@
                             Quien lo solicita
                         </th>
                         <th scope="col" class="px-6 py-3">
+                            Fecha Creación
+                        </th>
+                        <th scope="col" class="px-6 py-3">
                             Estatus
+                        </th>
+                        <th scope="col" class="px-6 py-3">
+                            Fecha Finalizado
                         </th>
                         <th scope="col" class="px-6 py-3">
                             Asignado
                         </th>
                     </tr>
                 </thead>
-                <!-- <tbody>
-                    <tr class="bg-white border-b">
-                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">
-                            Apple MacBook Pro 17"
-                        </th>
-                        <td class="px-6 py-4">
-                            Silver
-                        </td>
-                        <td class="px-6 py-4">
-                            Laptop
-                        </td>
-                        <td class="px-6 py-4">
-                            $2999
-                        </td>
-                    </tr>
-                    <tr class="bg-white border-b border-gray-200">
-                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">
-                            Microsoft Surface Pro
-                        </th>
-                        <td class="px-6 py-4">
-                            White
-                        </td>
-                        <td class="px-6 py-4">
-                            Laptop PC
-                        </td>
-                        <td class="px-6 py-4">
-                            $1999
-                        </td>
-                    </tr>
-                    <tr class="bg-white">
-                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">
-                            Magic Mouse 2
-                        </th>
-                        <td class="px-6 py-4">
-                            Black
-                        </td>
-                        <td class="px-6 py-4">
-                            Accessories
-                        </td>
-                        <td class="px-6 py-4">
-                            $99
-                        </td>
-                    </tr>
-                </tbody> -->
+                 <tbody>
+                </tbody> 
             </table>
         </div>
 
@@ -143,18 +107,18 @@
                     </div>
                     <!-- Modal body -->
                     <div class="p-4 md:p-5 space-y-4">
-                        <form class="max-w-lg mx-auto">
+                        <form class="max-w-lg mx-auto" id="myForm">
                             <div class="mb-5">
-                                <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Titulo del
+                                <label for="mensaje" class="block mb-2 text-sm font-medium text-gray-900">Titulo del
                                     ticket</label>
-                                <input type="email" id="email"
+                                <input type="text" id="mensaje" name="mensaje"
                                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                                     placeholder="ej: Error en la pantalla" required />
                             </div>
                             <div class="mb-5">
                                 <label for="descripcion"
                                     class="block mb-2 text-sm font-medium text-gray-900">Descripción</label>
-                                <textarea type="text" id="descripcion" rows="10"
+                                <textarea type="text" id="descripcion" rows="10" id="descripcion" name="descripcion"
                                     class="bg-gray-50 border border-gray-300 resize-none text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"></textarea>
                             </div>
                             <div class="flex items-center justify-end">
@@ -169,6 +133,8 @@
 
         <div class="fixed top-0 left-0 z-10 w-screen h-screen opacity-40 bg-black" id="fondoPantalla"></div>
     </div>
+
+    <script src="./socket.io/socket.io.js"></script>
     <script src="./js/ticket.js"></script>
 </body>
 
